# Xerus

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requeriments.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
Examples/: Benchmark_AutoXRD.ipynb  Xerustest.ipynb
Examples/data/: Cr-Ni.ras  Cr-Zn.ras  HoMoC2.ras  La1.75Sr0.25CuO4.ras
Examples/data/bench/: Mn2O3+LiF_parsed.csv  (+9 more)
Xerus/: __init__.py
Xerus/GSASII/: Absorb.py  G2compare.py  GSASII.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIIO.py  GSASIIIntPDFtool.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdata.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfiles.py  GSASIIfpaGUI.py  GSASIIimage.py  GSASIIimgGUI.py  GSASIIindex.py  GSASIIlattice.py  GSASIIlog.py  GSASIImapvars.py  GSASIImath.py  GSASIImpsubs.py  GSASIIobj.py  GSASIIpath.py  GSASIIphsGUI.py  GSASIIplot.py  GSASIIpwd.py  GSASIIpwdGUI.py  GSASIIpy3.py  GSASIIrestrGUI.py  GSASIIsasd.py  GSASIIscriptable.py  GSASIIseqGUI.py  GSASIIspc.py  GSASIIstrIO.py  GSASIIstrMain.py  GSASIIstrMath.py  SUBGROUPS.py  bootstrap.py  (+9 more)
Xerus/db/: localdb.py
Xerus/engine/: gsas2riet.py  gsas2utils.py  gsas2viz.py  gsas2wrap.py
Xerus/inc/: RigakuSi.instprm
Xerus/optimizer/: bbo.py
Xerus/queriers/: aflow.py  cod.py  mp.py  multiquery.py  optimade.py  oqmd.py  tcif.py  tcif_parallel.py  test_runner.py
Xerus/readers/: dataextensions.py  datareader.py
Xerus/settings/: config.conf  mplibcfg.py  settings.py
Xerus/similarity/: pattern_removal.py  visualization.py
Xerus/utils/: cifutils.py  preprocessing.py  tools.py
app/: app.py  conf.py  ui_utils.py  xerus_plot.py  xerus_run.py
tests/: __init__.py  test_gsas2.py  test_optimade.py  test_settings.py  test_solvers.py
tests/cif/: HoB2_MP_mp-2267.cif
tests/data/: B-test.json  Ho-B-test.json  Ho-test.json  HoB21.ras
(+86 files in other folders)
