##########################
# Setup.py Configuration #
##########################
[metadata]
name = Xerus
version = v1.0r1
description = XRay Estimation and Refinement Using Similarity (XERUS)
long_description = file: README.md

# URLs associated with the project
url = https://github.com/pedrobcst/Xerus
download_url = https://github.com/pedrobcst/Xerus/releases
project_urls =
    Bug Tracker = https://github.com/pedrobcst/Xerus/issues
    Source Code = https://github.com/pedrobcst/Xerus
    Documentation = https://github.com/pedrobcst/Xerus

# Author information
author = 
author_email = 
maintainer =
maintainer_email = 

# License Information
license = MIT
license_file = LICENSE.md

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    X-ray Diffraction
    Materials Science
    Materials Informatics

# Requirements
[options]
install_requires =
    plotly>=5
    requests>=2.25.1
    h5py>=2.10.0
    matplotlib==3.3.4
    seaborn==0.11.2
    scipy>=1.5.3
    pymatgen==2020.1.28
    numpy>=1.2.0
    pymongo<4
    optuna==2.4.0
    pytest>=6.2.1
    PeakUtils==1.3.3

tests_require =
    mongomock~=4.0

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = Xerus

[options.packages.find]
where = Xerus
